crates/sgf-core/tests/snapshots/ops_add_special_system/add_black_hole_4_4.snap
---
source: crates/sgf-core/tests/common/mod.rs
expression: value
---
Added Xulbaks_Maw (#791) at (433.43269, -205.48736) with 3 bodies and 1 lane
touched: [217, 791]
inverse: RemoveSystem { id: 791 }
… and 3 other issues

--- gamestate
+++ gamestate
@@ -44220,6 +44220,11 @@
 				length=18
 			}
  
+			{
+				to=791
+				length=43
+			}
+ 
 		}
 		asteroid_belts=
 		{
@@ -82543,6 +82548,43 @@
 		index=0
 		storm=4294967295
 	}
+	791=
+	{
+		coordinate=
+		{
+			x=433.43269
+			y=-205.48736
+			origin=4294967295
+			visual_height=4.31213
+		}
+		name=
+		{
+			key="Xulbaks_Maw"
+		}
+		planet=8403
+		planet=8404
+		planet=8405
+		star_class="sc_black_hole"
+		hyperlane=
+		{
+			
+			{
+				to=217
+				length=43
+			}
+ 
+		}
+		initializer="special_init_01"
+		inner_radius=150
+		outer_radius=250
+		starbases=
+		{
+			4294967295 
+		}
+		sector=4294967295
+		index=0
+		storm=4294967295
+	}
 }
 starbase_mgr=
 {
@@ -530216,6 +530258,133 @@
 				4988 
 			}
 		}
+		8403=
+		{
+			planet_class="pc_black_hole"
+			planet_size=30
+			carrier_binary_flags=3
+			name=
+			{
+				key="STAR_NAME_1_OF_1"
+				variables=
+				{
+					
+					{
+						key="NAME"
+						value=
+						{
+							key="Xulbaks_Maw"
+						}
+					}
+ 
+				}
+			}
+			coordinate=
+			{
+				x=0
+				y=0
+				origin=791
+			}
+			orbit=0
+			last_bombardment=			"0.01.01"
+			planet_orbitals=
+			{
+			}
+			bombardment_damage=0
+			entity=0
+			deposits=
+			{
+				16777216 
+			}
+		}
+		8404=
+		{
+			planet_class="pc_broken"
+			planet_size=12
+			carrier_binary_flags=1
+			name=
+			{
+				key="PLANET_NAME_FORMAT"
+				variables=
+				{
+					
+					{
+						key="PARENT"
+						value=
+						{
+							key="Xulbaks_Maw"
+						}
+					}
+ 
+					{
+						key="NUMERAL"
+						value=
+						{
+							key="I"
+							literal=yes
+						}
+					}
+ 
+				}
+			}
+			coordinate=
+			{
+				x=45.96267
+				y=38.56726
+				origin=791
+			}
+			orbit=60
+			last_bombardment=			"0.01.01"
+			planet_orbitals=
+			{
+			}
+			bombardment_damage=0
+			entity=0
+		}
+		8405=
+		{
+			planet_class="pc_barren_cold"
+			planet_size=14
+			carrier_binary_flags=1
+			name=
+			{
+				key="PLANET_NAME_FORMAT"
+				variables=
+				{
+					
+					{
+						key="PARENT"
+						value=
+						{
+							key="Xulbaks_Maw"
+						}
+					}
+ 
+					{
+						key="NUMERAL"
+						value=
+						{
+							key="II"
+							literal=yes
+						}
+					}
+ 
+				}
+			}
+			coordinate=
+			{
+				x=-84.57234
+				y=-30.78181
+				origin=791
+			}
+			orbit=90
+			last_bombardment=			"0.01.01"
+			planet_orbitals=
+			{
+			}
+			bombardment_damage=0
+			entity=1
+		}
 	}
 }
 astral_rifts=
@@ -954250,7 +954419,7 @@
 {
 }
 last_created_country=56
-last_created_system=790
+last_created_system=791
 leaders=
 {
 	419430400=
@@ -1466966,7 +1467135,15 @@
 }
 deposit=
 {
-	0=none
+	16777216=
+	{
+		type="d_dark_matter_deposit_1"
+		deposit_holder=
+		{
+			type=0
+			id=8403
+		}
+	}
 	1=none
 	2=none
 	3=none
