crates/sgf-core/tests/snapshots/ops_add_special_system/add_black_hole_4_5.snap
---
source: crates/sgf-core/tests/common/mod.rs
expression: value
---
Added Xulbaks Maw #601 at (-292.23404, -137.62265) with 3 bodies and 1 lane
touched: [169, 601]
inverse: RemoveSystem { system: 601 }
… and 3 other issues

--- gamestate
+++ gamestate
@@ -41044,6 +41044,11 @@
 				length=24
 			}
  
+			{
+				to=601
+				length=44
+			}
+ 
 		}
 		arm=1
 		flags=
@@ -71403,6 +71408,43 @@
 		index=0
 		storm=4294967295
 	}
+	601=
+	{
+		coordinate=
+		{
+			x=-292.23404
+			y=-137.62265
+			origin=4294967295
+			visual_height=3.65056
+		}
+		name=
+		{
+			key="Xulbaks_Maw"
+		}
+		planet=16777273
+		planet=6375
+		planet=6376
+		star_class="sc_black_hole"
+		hyperlane=
+		{
+			
+			{
+				to=169
+				length=44
+			}
+ 
+		}
+		initializer="special_init_01"
+		inner_radius=150
+		outer_radius=250
+		starbases=
+		{
+			4294967295 
+		}
+		sector=4294967295
+		index=0
+		storm=4294967295
+	}
 }
 starbase_mgr=
 {
@@ -82369,7 +82411,45 @@
 				128 
 			}
 		}
-		57=none
+		16777273=
+		{
+			planet_class="pc_black_hole"
+			planet_size=30
+			carrier_binary_flags=3
+			name=
+			{
+				key="STAR_NAME_1_OF_1"
+				variables=
+				{
+					
+					{
+						key="NAME"
+						value=
+						{
+							key="Xulbaks_Maw"
+						}
+					}
+ 
+				}
+			}
+			coordinate=
+			{
+				x=0
+				y=0
+				origin=601
+			}
+			orbit=0
+			last_bombardment=			"0.01.01"
+			planet_orbitals=
+			{
+			}
+			bombardment_damage=0
+			entity=0
+			deposits=
+			{
+				16777216 
+			}
+		}
 		58=
 		{
 			colony=30
@@ -411928,6 +412008,94 @@
 				4047 
 			}
 		}
+		6375=
+		{
+			planet_class="pc_broken"
+			planet_size=12
+			carrier_binary_flags=1
+			name=
+			{
+				key="PLANET_NAME_FORMAT"
+				variables=
+				{
+					
+					{
+						key="PARENT"
+						value=
+						{
+							key="Xulbaks_Maw"
+						}
+					}
+ 
+					{
+						key="NUMERAL"
+						value=
+						{
+							key="I"
+							literal=yes
+						}
+					}
+ 
+				}
+			}
+			coordinate=
+			{
+				x=45.96267
+				y=38.56726
+				origin=601
+			}
+			orbit=60
+			last_bombardment=			"0.01.01"
+			planet_orbitals=
+			{
+			}
+			bombardment_damage=0
+			entity=0
+		}
+		6376=
+		{
+			planet_class="pc_barren_cold"
+			planet_size=14
+			carrier_binary_flags=1
+			name=
+			{
+				key="PLANET_NAME_FORMAT"
+				variables=
+				{
+					
+					{
+						key="PARENT"
+						value=
+						{
+							key="Xulbaks_Maw"
+						}
+					}
+ 
+					{
+						key="NUMERAL"
+						value=
+						{
+							key="II"
+							literal=yes
+						}
+					}
+ 
+				}
+			}
+			coordinate=
+			{
+				x=-84.57234
+				y=-30.78181
+				origin=601
+			}
+			orbit=90
+			last_bombardment=			"0.01.01"
+			planet_orbitals=
+			{
+			}
+			bombardment_damage=0
+			entity=1
+		}
 	}
 }
 astral_rifts=
@@ -692049,7 +692217,7 @@
 {
 }
 last_created_country=55
-last_created_system=600
+last_created_system=601
 leaders=
 {
 	285212672=
@@ -1076220,7 +1076388,15 @@
 }
 deposit=
 {
-	0=none
+	16777216=
+	{
+		type="d_dark_matter_deposit_1"
+		deposit_holder=
+		{
+			type=0
+			id=16777273
+		}
+	}
 	1=none
 	2=none
 	3=none
@@ -1122853,7 +1123029,6 @@
 		"Viskarrons_Maw"
 		"Rixikars_Maw"
 		"Zultars_Maw"
-		"Xulbaks_Maw"
 		"Urakhannons_Maw"
 		"Proteemas_Black_Hole"
 		"Xuukanis_Black_Hole"
