crates/sgf-core/tests/snapshots/ops_add_special_system/add_great_wound_4_4.snap
---
source: crates/sgf-core/tests/common/mod.rs
expression: value
---
Added Sgf_Wound (#791) at (433.43269, -205.48736) with 4 bodies and 1 lane
touched: [217, 791]
inverse: RemoveSystem { id: 791 }
… and 3 other issues

--- gamestate
+++ gamestate
@@ -44220,6 +44220,11 @@
 				length=18
 			}
  
+			{
+				to=791
+				length=43
+			}
+ 
 		}
 		asteroid_belts=
 		{
@@ -82543,6 +82548,44 @@
 		index=0
 		storm=4294967295
 	}
+	791=
+	{
+		coordinate=
+		{
+			x=433.43269
+			y=-205.48736
+			origin=4294967295
+			visual_height=4.31213
+		}
+		name=
+		{
+			key="Sgf_Wound"
+		}
+		planet=8403
+		planet=8404
+		planet=8405
+		planet=8406
+		star_class="sc_black_hole"
+		hyperlane=
+		{
+			
+			{
+				to=217
+				length=43
+			}
+ 
+		}
+		initializer="great_wound_system"
+		inner_radius=180
+		outer_radius=280
+		starbases=
+		{
+			4294967295 
+		}
+		sector=4294967295
+		index=0
+		storm=4294967295
+	}
 }
 starbase_mgr=
 {
@@ -530216,6 +530259,137 @@
 				4988 
 			}
 		}
+		8403=
+		{
+			planet_class="pc_black_hole"
+			planet_size=40
+			carrier_binary_flags=3
+			name=
+			{
+				key="STAR_NAME_1_OF_1"
+				variables=
+				{
+					
+					{
+						key="NAME"
+						value=
+						{
+							key="Sgf_Wound"
+						}
+					}
+ 
+				}
+			}
+			coordinate=
+			{
+				x=0
+				y=0
+				origin=791
+			}
+			orbit=0
+			last_bombardment=			"0.01.01"
+			planet_orbitals=
+			{
+			}
+			bombardment_damage=0
+			entity=0
+			deposits=
+			{
+				16777216 
+			}
+		}
+		8404=
+		{
+			planet_class="pc_black_hole"
+			planet_size=20
+			carrier_binary_flags=3
+			name=
+			{
+				key="NAME_Subspace_Rupture_1"
+			}
+			binary_flags=65
+			coordinate=
+			{
+				x=59.99086
+				y=1.04714
+				origin=791
+			}
+			orbit=60
+			last_bombardment=			"0.01.01"
+			planet_orbitals=
+			{
+			}
+			bombardment_damage=0
+			entity=0
+		}
+		8405=
+		{
+			planet_class="pc_black_hole"
+			planet_size=20
+			carrier_binary_flags=3
+			name=
+			{
+				key="NAME_Subspace_Rupture_2"
+			}
+			binary_flags=65
+			coordinate=
+			{
+				x=-102.86008
+				y=-61.80457
+				origin=791
+			}
+			orbit=120
+			last_bombardment=			"0.01.01"
+			planet_orbitals=
+			{
+			}
+			bombardment_damage=0
+			entity=0
+		}
+		8406=
+		{
+			planet_class="pc_barren"
+			planet_size=10
+			carrier_binary_flags=1
+			name=
+			{
+				key="PLANET_NAME_FORMAT"
+				variables=
+				{
+					
+					{
+						key="PARENT"
+						value=
+						{
+							key="Sgf_Wound"
+						}
+					}
+ 
+					{
+						key="NUMERAL"
+						value=
+						{
+							key="I"
+							literal=yes
+						}
+					}
+ 
+				}
+			}
+			coordinate=
+			{
+				x=0
+				y=150
+				origin=791
+			}
+			orbit=150
+			last_bombardment=			"0.01.01"
+			planet_orbitals=
+			{
+			}
+			bombardment_damage=0
+			entity=1
+		}
 	}
 }
 astral_rifts=
@@ -954250,7 +954424,7 @@
 {
 }
 last_created_country=56
-last_created_system=790
+last_created_system=791
 leaders=
 {
 	419430400=
@@ -978901,7 +979075,7 @@
 {
 	count=
 	{
-		1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 15 1 1 1 1 2 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 7 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 2 1 1 2 1 1 1 1 1 1 
+		1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 15 1 1 1 1 2 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 7 1 1 1 1 1 1 1 1 1 2 1 1 1 1 1 1 1 1 1 1 1 1 1 1 2 1 1 2 1 1 1 1 1 1 
 	}
 	initializer=
 	{
@@ -1466966,7 +1467140,15 @@
 }
 deposit=
 {
-	0=none
+	16777216=
+	{
+		type="d_dark_matter_deposit_10"
+		deposit_holder=
+		{
+			type=0
+			id=8403
+		}
+	}
 	1=none
 	2=none
 	3=none
