crates/sgf-core/tests/snapshots/ops_add_special_system/add_great_wound_4_5.snap
---
source: crates/sgf-core/tests/common/mod.rs
expression: value
---
Added Sgf Wound #601 at (-292.23404, -137.62265) with 4 bodies and 1 lane
touched: [169, 601]
inverse: RemoveSystem { system: 601 }
… and 3 other issues

--- gamestate
+++ gamestate
@@ -41044,6 +41044,11 @@
 				length=24
 			}
  
+			{
+				to=601
+				length=44
+			}
+ 
 		}
 		arm=1
 		flags=
@@ -71403,6 +71408,44 @@
 		index=0
 		storm=4294967295
 	}
+	601=
+	{
+		coordinate=
+		{
+			x=-292.23404
+			y=-137.62265
+			origin=4294967295
+			visual_height=4.31213
+		}
+		name=
+		{
+			key="Sgf_Wound"
+		}
+		planet=16777273
+		planet=6375
+		planet=6376
+		planet=6377
+		star_class="sc_black_hole"
+		hyperlane=
+		{
+			
+			{
+				to=169
+				length=44
+			}
+ 
+		}
+		initializer="great_wound_system"
+		inner_radius=180
+		outer_radius=280
+		starbases=
+		{
+			4294967295 
+		}
+		sector=4294967295
+		index=0
+		storm=4294967295
+	}
 }
 starbase_mgr=
 {
@@ -82369,7 +82412,45 @@
 				128 
 			}
 		}
-		57=none
+		16777273=
+		{
+			planet_class="pc_black_hole"
+			planet_size=40
+			carrier_binary_flags=3
+			name=
+			{
+				key="STAR_NAME_1_OF_1"
+				variables=
+				{
+					
+					{
+						key="NAME"
+						value=
+						{
+							key="Sgf_Wound"
+						}
+					}
+ 
+				}
+			}
+			coordinate=
+			{
+				x=0
+				y=0
+				origin=601
+			}
+			orbit=0
+			last_bombardment=			"0.01.01"
+			planet_orbitals=
+			{
+			}
+			bombardment_damage=0
+			entity=0
+			deposits=
+			{
+				16777216 
+			}
+		}
 		58=
 		{
 			colony=30
@@ -411928,6 +412009,98 @@
 				4047 
 			}
 		}
+		6375=
+		{
+			planet_class="pc_black_hole"
+			planet_size=20
+			carrier_binary_flags=3
+			name=
+			{
+				key="NAME_Subspace_Rupture_1"
+			}
+			binary_flags=65
+			coordinate=
+			{
+				x=59.99086
+				y=1.04714
+				origin=601
+			}
+			orbit=60
+			last_bombardment=			"0.01.01"
+			planet_orbitals=
+			{
+			}
+			bombardment_damage=0
+			entity=0
+		}
+		6376=
+		{
+			planet_class="pc_black_hole"
+			planet_size=20
+			carrier_binary_flags=3
+			name=
+			{
+				key="NAME_Subspace_Rupture_2"
+			}
+			binary_flags=65
+			coordinate=
+			{
+				x=-102.86008
+				y=-61.80457
+				origin=601
+			}
+			orbit=120
+			last_bombardment=			"0.01.01"
+			planet_orbitals=
+			{
+			}
+			bombardment_damage=0
+			entity=0
+		}
+		6377=
+		{
+			planet_class="pc_barren"
+			planet_size=10
+			carrier_binary_flags=1
+			name=
+			{
+				key="PLANET_NAME_FORMAT"
+				variables=
+				{
+					
+					{
+						key="PARENT"
+						value=
+						{
+							key="Sgf_Wound"
+						}
+					}
+ 
+					{
+						key="NUMERAL"
+						value=
+						{
+							key="I"
+							literal=yes
+						}
+					}
+ 
+				}
+			}
+			coordinate=
+			{
+				x=0
+				y=150
+				origin=601
+			}
+			orbit=150
+			last_bombardment=			"0.01.01"
+			planet_orbitals=
+			{
+			}
+			bombardment_damage=0
+			entity=1
+		}
 	}
 }
 astral_rifts=
@@ -692049,7 +692222,7 @@
 {
 }
 last_created_country=55
-last_created_system=600
+last_created_system=601
 leaders=
 {
 	285212672=
@@ -709170,7 +709343,7 @@
 {
 	count=
 	{
-		1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 2 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 15 1 1 1 1 1 1 1 1 1 1 1 1 1 8 1 1 1 1 1 1 1 1 1 1 2 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 2 1 1 1 1 1 1 1 1 1 1 2 1 1 1 1 1 1 1 1 1 1 1 1 1 
+		1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 2 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 15 1 1 1 1 1 1 1 1 1 1 1 1 1 8 1 1 1 1 1 2 1 1 1 1 2 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 2 1 1 1 1 1 1 1 1 1 1 2 1 1 1 1 1 1 1 1 1 1 1 1 1 
 	}
 	initializer=
 	{
@@ -1076220,7 +1076393,15 @@
 }
 deposit=
 {
-	0=none
+	16777216=
+	{
+		type="d_dark_matter_deposit_10"
+		deposit_holder=
+		{
+			type=0
+			id=16777273
+		}
+	}
 	1=none
 	2=none
 	3=none
