crates/sgf-core/tests/snapshots/ops_add_special_system/add_larionessi_4_4.snap
---
source: crates/sgf-core/tests/common/mod.rs
expression: value
---
Added NAME_Unique_System_2 (#791) at (433.43269, -205.48736) with 7 bodies, 3 belts and 1 lane
touched: [217, 791]
inverse: RemoveSystem { id: 791 }
… and 3 other issues

--- gamestate
+++ gamestate
@@ -44220,6 +44220,11 @@
 				length=18
 			}
  
+			{
+				to=791
+				length=43
+			}
+ 
 		}
 		asteroid_belts=
 		{
@@ -82543,6 +82548,66 @@
 		index=0
 		storm=4294967295
 	}
+	791=
+	{
+		coordinate=
+		{
+			x=433.43269
+			y=-205.48736
+			origin=4294967295
+			visual_height=4.31213
+		}
+		name=
+		{
+			key="NAME_Unique_System_2"
+		}
+		planet=8403
+		planet=8404
+		planet=8405
+		planet=8406
+		planet=8407
+		planet=8408
+		planet=8409
+		star_class="sc_neutron_star"
+		hyperlane=
+		{
+			
+			{
+				to=217
+				length=43
+			}
+ 
+		}
+		asteroid_belts=
+		{
+			
+			{
+				type="rocky_asteroid_belt"
+				inner_radius=35
+			}
+ 
+			{
+				type="rocky_asteroid_belt"
+				inner_radius=45
+			}
+ 
+			{
+				type="rocky_asteroid_belt"
+				inner_radius=55
+			}
+ 
+		}
+		initializer="unique_system_initializer_02"
+		inner_radius=150
+		outer_radius=250
+		starbases=
+		{
+			4294967295 
+		}
+		sector=4294967295
+		index=0
+		storm=4294967295
+	}
 }
 starbase_mgr=
 {
@@ -530216,6 +530281,319 @@
 				4988 
 			}
 		}
+		8403=
+		{
+			planet_class="pc_neutron_star"
+			planet_size=25
+			carrier_binary_flags=3
+			name=
+			{
+				key="STAR_NAME_1_OF_1"
+				variables=
+				{
+					
+					{
+						key="NAME"
+						value=
+						{
+							key="NAME_Unique_System_2"
+						}
+					}
+ 
+				}
+			}
+			coordinate=
+			{
+				x=0
+				y=0
+				origin=791
+			}
+			orbit=0
+			last_bombardment=			"0.01.01"
+			planet_orbitals=
+			{
+			}
+			bombardment_damage=0
+			entity=0
+			deposits=
+			{
+				16777216 
+			}
+		}
+		8404=
+		{
+			planet_class="pc_barren"
+			planet_size=18
+			carrier_binary_flags=1
+			name=
+			{
+				key="PLANET_NAME_FORMAT"
+				variables=
+				{
+					
+					{
+						key="PARENT"
+						value=
+						{
+							key="NAME_Unique_System_2"
+						}
+					}
+ 
+					{
+						key="NUMERAL"
+						value=
+						{
+							key="I"
+							literal=yes
+						}
+					}
+ 
+				}
+			}
+			coordinate=
+			{
+				x=61.08002
+				y=22.23131
+				origin=791
+			}
+			orbit=65
+			last_bombardment=			"0.01.01"
+			planet_orbitals=
+			{
+			}
+			bombardment_damage=0
+			entity=1
+			deposits=
+			{
+				16777217 
+			}
+		}
+		8405=
+		{
+			planet_class="pc_asteroid"
+			planet_size=5
+			carrier_binary_flags=1
+			name=
+			{
+				key="ASTEROID_NAME_FORMAT"
+				variables=
+				{
+					
+					{
+						key="prefix"
+						value=
+						{
+							key="88D2-"
+						}
+					}
+ 
+					{
+						key="suffix"
+						value=
+						{
+							key="784"
+						}
+					}
+ 
+				}
+			}
+			coordinate=
+			{
+				x=-40
+				y=69.28203
+				origin=791
+			}
+			orbit=80
+			last_bombardment=			"0.01.01"
+			planet_orbitals=
+			{
+			}
+			bombardment_damage=0
+			entity=0
+			deposits=
+			{
+				16777218 
+			}
+		}
+		8406=
+		{
+			planet_class="pc_asteroid"
+			planet_size=5
+			carrier_binary_flags=1
+			name=
+			{
+				key="ASTEROID_NAME_FORMAT"
+				variables=
+				{
+					
+					{
+						key="prefix"
+						value=
+						{
+							key="XR-7-"
+						}
+					}
+ 
+					{
+						key="suffix"
+						value=
+						{
+							key="863"
+						}
+					}
+ 
+				}
+			}
+			coordinate=
+			{
+				x=-51.42301
+				y=-61.28356
+				origin=791
+			}
+			orbit=80
+			last_bombardment=			"0.01.01"
+			planet_orbitals=
+			{
+			}
+			bombardment_damage=0
+			entity=0
+			deposits=
+			{
+				16777219 
+			}
+		}
+		8407=
+		{
+			planet_class="pc_tropical"
+			planet_size=20
+			carrier_binary_flags=1
+			name=
+			{
+				key="NAME_Unique_System_2_Planet"
+			}
+			binary_flags=65
+			coordinate=
+			{
+				x=47.5
+				y=-82.27241
+				origin=791
+			}
+			orbit=95
+			last_bombardment=			"0.01.01"
+			moons=
+			{
+				8408 8409 
+			}
+			planet_orbitals=
+			{
+			}
+			bombardment_damage=0
+			entity=2
+			deposits=
+			{
+				16777220 16777221 16777222 
+			}
+		}
+		8408=
+		{
+			planet_class="pc_barren"
+			planet_size=10
+			carrier_binary_flags=1
+			name=
+			{
+				key="SUBPLANET_NAME_FORMAT"
+				variables=
+				{
+					
+					{
+						key="PARENT"
+						value=
+						{
+							key="NAME_Unique_System_2_Planet"
+						}
+					}
+ 
+					{
+						key="NUMERAL"
+						value=
+						{
+							key="a"
+							literal=yes
+						}
+					}
+ 
+				}
+			}
+			binary_flags=576
+			coordinate=
+			{
+				x=47.5
+				y=-72.27241
+				origin=791
+			}
+			orbit=10
+			last_bombardment=			"0.01.01"
+			moon_of=8407
+			planet_orbitals=
+			{
+			}
+			bombardment_damage=0
+			entity=1
+			deposits=
+			{
+				16777223 
+			}
+		}
+		8409=
+		{
+			planet_class="pc_barren"
+			planet_size=10
+			carrier_binary_flags=1
+			name=
+			{
+				key="SUBPLANET_NAME_FORMAT"
+				variables=
+				{
+					
+					{
+						key="PARENT"
+						value=
+						{
+							key="NAME_Unique_System_2_Planet"
+						}
+					}
+ 
+					{
+						key="NUMERAL"
+						value=
+						{
+							key="b"
+							literal=yes
+						}
+					}
+ 
+				}
+			}
+			binary_flags=576
+			coordinate=
+			{
+				x=47.5
+				y=-62.27241
+				origin=791
+			}
+			orbit=20
+			last_bombardment=			"0.01.01"
+			moon_of=8407
+			planet_orbitals=
+			{
+			}
+			bombardment_damage=0
+			entity=1
+			deposits=
+			{
+				16777224 
+			}
+		}
 	}
 }
 astral_rifts=
@@ -954250,7 +954628,7 @@
 {
 }
 last_created_country=56
-last_created_system=790
+last_created_system=791
 leaders=
 {
 	419430400=
@@ -978901,7 +979279,7 @@
 {
 	count=
 	{
-		1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 15 1 1 1 1 2 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 7 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 2 1 1 2 1 1 1 1 1 1 
+		1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 15 1 1 1 1 2 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 7 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 2 1 1 2 1 1 1 1 1 1 1 
 	}
 	initializer=
 	{
@@ -979011,6 +979389,7 @@
 		"lone_defender"
 		"unique_system_initializer_09"
 		"hostile_init_14"
+		"unique_system_initializer_02"
 	}
 }
 saved_leaders=
@@ -1466966,15 +1467345,87 @@
 }
 deposit=
 {
-	0=none
-	1=none
-	2=none
-	3=none
-	4=none
-	5=none
-	6=none
-	7=none
-	8=none
+	16777216=
+	{
+		type="d_physics_5"
+		deposit_holder=
+		{
+			type=0
+			id=8403
+		}
+	}
+	16777217=
+	{
+		type="d_minerals_5"
+		deposit_holder=
+		{
+			type=0
+			id=8404
+		}
+	}
+	16777218=
+	{
+		type="d_alloys_2"
+		deposit_holder=
+		{
+			type=0
+			id=8405
+		}
+	}
+	16777219=
+	{
+		type="d_alloys_2"
+		deposit_holder=
+		{
+			type=0
+			id=8406
+		}
+	}
+	16777220=
+	{
+		type="d_green_hills"
+		deposit_holder=
+		{
+			type=0
+			id=8407
+		}
+	}
+	16777221=
+	{
+		type="d_lush_jungle"
+		deposit_holder=
+		{
+			type=0
+			id=8407
+		}
+	}
+	16777222=
+	{
+		type="d_tempestous_mountain"
+		deposit_holder=
+		{
+			type=0
+			id=8407
+		}
+	}
+	16777223=
+	{
+		type="d_minerals_3"
+		deposit_holder=
+		{
+			type=0
+			id=8408
+		}
+	}
+	16777224=
+	{
+		type="d_minerals_3"
+		deposit_holder=
+		{
+			type=0
+			id=8409
+		}
+	}
 	9=none
 	10=none
 	11=none
@@ -1549413,7 +1549864,6 @@
 		"937"
 		"893"
 		"951"
-		"863"
 		"915"
 		"872"
 		"138"
@@ -1550721,7 +1551171,6 @@
 		"394"
 		"438"
 		"758"
-		"784"
 		"728"
 		"328"
 		"906"
