crates/sgf-core/tests/snapshots/ops_add_special_system/add_larionessi_4_5.snap
---
source: crates/sgf-core/tests/common/mod.rs
expression: value
---
Added Unique System 2 #601 at (-292.23404, -137.62265) with 7 bodies, 3 belts and 1 lane
touched: [169, 601]
inverse: RemoveSystem { system: 601 }
… and 3 other issues

--- gamestate
+++ gamestate
@@ -41044,6 +41044,11 @@
 				length=24
 			}
  
+			{
+				to=601
+				length=44
+			}
+ 
 		}
 		arm=1
 		flags=
@@ -71403,6 +71408,66 @@
 		index=0
 		storm=4294967295
 	}
+	601=
+	{
+		coordinate=
+		{
+			x=-292.23404
+			y=-137.62265
+			origin=4294967295
+			visual_height=3.65056
+		}
+		name=
+		{
+			key="NAME_Unique_System_2"
+		}
+		planet=16777273
+		planet=6375
+		planet=6376
+		planet=6377
+		planet=6378
+		planet=6379
+		planet=6380
+		star_class="sc_neutron_star"
+		hyperlane=
+		{
+			
+			{
+				to=169
+				length=44
+			}
+ 
+		}
+		asteroid_belts=
+		{
+			
+			{
+				type="rocky_asteroid_belt"
+				inner_radius=35
+			}
+ 
+			{
+				type="rocky_asteroid_belt"
+				inner_radius=45
+			}
+ 
+			{
+				type="rocky_asteroid_belt"
+				inner_radius=55
+			}
+ 
+		}
+		initializer="unique_system_initializer_02"
+		inner_radius=150
+		outer_radius=250
+		starbases=
+		{
+			4294967295 
+		}
+		sector=4294967295
+		index=0
+		storm=4294967295
+	}
 }
 starbase_mgr=
 {
@@ -82369,7 +82434,45 @@
 				128 
 			}
 		}
-		57=none
+		16777273=
+		{
+			planet_class="pc_neutron_star"
+			planet_size=25
+			carrier_binary_flags=3
+			name=
+			{
+				key="STAR_NAME_1_OF_1"
+				variables=
+				{
+					
+					{
+						key="NAME"
+						value=
+						{
+							key="NAME_Unique_System_2"
+						}
+					}
+ 
+				}
+			}
+			coordinate=
+			{
+				x=0
+				y=0
+				origin=601
+			}
+			orbit=0
+			last_bombardment=			"0.01.01"
+			planet_orbitals=
+			{
+			}
+			bombardment_damage=0
+			entity=0
+			deposits=
+			{
+				16777216 
+			}
+		}
 		58=
 		{
 			colony=30
@@ -411928,6 +412031,280 @@
 				4047 
 			}
 		}
+		6375=
+		{
+			planet_class="pc_barren"
+			planet_size=18
+			carrier_binary_flags=1
+			name=
+			{
+				key="PLANET_NAME_FORMAT"
+				variables=
+				{
+					
+					{
+						key="PARENT"
+						value=
+						{
+							key="NAME_Unique_System_2"
+						}
+					}
+ 
+					{
+						key="NUMERAL"
+						value=
+						{
+							key="I"
+							literal=yes
+						}
+					}
+ 
+				}
+			}
+			coordinate=
+			{
+				x=61.08002
+				y=22.23131
+				origin=601
+			}
+			orbit=65
+			last_bombardment=			"0.01.01"
+			planet_orbitals=
+			{
+			}
+			bombardment_damage=0
+			entity=1
+			deposits=
+			{
+				16777217 
+			}
+		}
+		6376=
+		{
+			planet_class="pc_asteroid"
+			planet_size=5
+			carrier_binary_flags=1
+			name=
+			{
+				key="ASTEROID_NAME_FORMAT"
+				variables=
+				{
+					
+					{
+						key="prefix"
+						value=
+						{
+							key="88D2-"
+						}
+					}
+ 
+					{
+						key="suffix"
+						value=
+						{
+							key="002"
+						}
+					}
+ 
+				}
+			}
+			coordinate=
+			{
+				x=-40
+				y=69.28203
+				origin=601
+			}
+			orbit=80
+			last_bombardment=			"0.01.01"
+			planet_orbitals=
+			{
+			}
+			bombardment_damage=0
+			entity=0
+			deposits=
+			{
+				16777218 
+			}
+		}
+		6377=
+		{
+			planet_class="pc_asteroid"
+			planet_size=5
+			carrier_binary_flags=1
+			name=
+			{
+				key="ASTEROID_NAME_FORMAT"
+				variables=
+				{
+					
+					{
+						key="prefix"
+						value=
+						{
+							key="XR-7-"
+						}
+					}
+ 
+					{
+						key="suffix"
+						value=
+						{
+							key="863"
+						}
+					}
+ 
+				}
+			}
+			coordinate=
+			{
+				x=-51.42301
+				y=-61.28356
+				origin=601
+			}
+			orbit=80
+			last_bombardment=			"0.01.01"
+			planet_orbitals=
+			{
+			}
+			bombardment_damage=0
+			entity=0
+			deposits=
+			{
+				16777219 
+			}
+		}
+		6378=
+		{
+			planet_class="pc_tropical"
+			planet_size=20
+			carrier_binary_flags=1
+			name=
+			{
+				key="NAME_Unique_System_2_Planet"
+			}
+			binary_flags=65
+			coordinate=
+			{
+				x=47.5
+				y=-82.27241
+				origin=601
+			}
+			orbit=95
+			last_bombardment=			"0.01.01"
+			moons=
+			{
+				6379 6380 
+			}
+			planet_orbitals=
+			{
+			}
+			bombardment_damage=0
+			entity=2
+			deposits=
+			{
+				16777220 16777221 16777222 
+			}
+		}
+		6379=
+		{
+			planet_class="pc_barren"
+			planet_size=10
+			carrier_binary_flags=1
+			name=
+			{
+				key="SUBPLANET_NAME_FORMAT"
+				variables=
+				{
+					
+					{
+						key="PARENT"
+						value=
+						{
+							key="NAME_Unique_System_2_Planet"
+						}
+					}
+ 
+					{
+						key="NUMERAL"
+						value=
+						{
+							key="a"
+							literal=yes
+						}
+					}
+ 
+				}
+			}
+			binary_flags=576
+			coordinate=
+			{
+				x=47.5
+				y=-72.27241
+				origin=601
+			}
+			orbit=10
+			last_bombardment=			"0.01.01"
+			moon_of=6378
+			planet_orbitals=
+			{
+			}
+			bombardment_damage=0
+			entity=1
+			deposits=
+			{
+				16777223 
+			}
+		}
+		6380=
+		{
+			planet_class="pc_barren"
+			planet_size=10
+			carrier_binary_flags=1
+			name=
+			{
+				key="SUBPLANET_NAME_FORMAT"
+				variables=
+				{
+					
+					{
+						key="PARENT"
+						value=
+						{
+							key="NAME_Unique_System_2_Planet"
+						}
+					}
+ 
+					{
+						key="NUMERAL"
+						value=
+						{
+							key="b"
+							literal=yes
+						}
+					}
+ 
+				}
+			}
+			binary_flags=576
+			coordinate=
+			{
+				x=47.5
+				y=-62.27241
+				origin=601
+			}
+			orbit=20
+			last_bombardment=			"0.01.01"
+			moon_of=6378
+			planet_orbitals=
+			{
+			}
+			bombardment_damage=0
+			entity=1
+			deposits=
+			{
+				16777224 
+			}
+		}
 	}
 }
 astral_rifts=
@@ -692049,7 +692426,7 @@
 {
 }
 last_created_country=55
-last_created_system=600
+last_created_system=601
 leaders=
 {
 	285212672=
@@ -709170,7 +709547,7 @@
 {
 	count=
 	{
-		1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 2 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 15 1 1 1 1 1 1 1 1 1 1 1 1 1 8 1 1 1 1 1 1 1 1 1 1 2 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 2 1 1 1 1 1 1 1 1 1 1 2 1 1 1 1 1 1 1 1 1 1 1 1 1 
+		1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 2 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 15 1 1 1 1 1 1 1 1 1 1 1 1 1 8 1 1 1 1 1 1 1 1 1 1 2 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 2 1 1 1 1 1 1 1 1 1 1 2 1 1 1 1 1 1 1 1 1 1 1 1 1 1 
 	}
 	initializer=
 	{
@@ -709282,6 +709659,7 @@
 		"trappist_initializer"
 		"ratling_1_1"
 		"sanctuary_system"
+		"unique_system_initializer_02"
 	}
 }
 ships=
@@ -1076220,15 +1076598,87 @@
 }
 deposit=
 {
-	0=none
-	1=none
-	2=none
-	3=none
-	4=none
-	5=none
-	6=none
-	7=none
-	8=none
+	16777216=
+	{
+		type="d_physics_5"
+		deposit_holder=
+		{
+			type=0
+			id=16777273
+		}
+	}
+	16777217=
+	{
+		type="d_minerals_5"
+		deposit_holder=
+		{
+			type=0
+			id=6375
+		}
+	}
+	16777218=
+	{
+		type="d_alloys_2"
+		deposit_holder=
+		{
+			type=0
+			id=6376
+		}
+	}
+	16777219=
+	{
+		type="d_alloys_2"
+		deposit_holder=
+		{
+			type=0
+			id=6377
+		}
+	}
+	16777220=
+	{
+		type="d_green_hills"
+		deposit_holder=
+		{
+			type=0
+			id=6378
+		}
+	}
+	16777221=
+	{
+		type="d_lush_jungle"
+		deposit_holder=
+		{
+			type=0
+			id=6378
+		}
+	}
+	16777222=
+	{
+		type="d_tempestous_mountain"
+		deposit_holder=
+		{
+			type=0
+			id=6378
+		}
+	}
+	16777223=
+	{
+		type="d_minerals_3"
+		deposit_holder=
+		{
+			type=0
+			id=6379
+		}
+	}
+	16777224=
+	{
+		type="d_minerals_3"
+		deposit_holder=
+		{
+			type=0
+			id=6380
+		}
+	}
 	9=none
 	10=none
 	11=none
@@ -1126379,7 +1126829,6 @@
 		"937"
 		"893"
 		"951"
-		"863"
 		"915"
 		"872"
 		"138"
@@ -1127782,7 +1128231,6 @@
 		"984"
 		"009"
 		"LT-47"
-		"002"
 		"K14"
 		"997"
 		"72"
