crates/sgf-core/tests/snapshots/ops_add_special_system/add_terraformed_4_4.snap
---
source: crates/sgf-core/tests/common/mod.rs
expression: value
---
Added Sgf_Terraformed (#791) at (433.43269, -205.48736) with 4 bodies, 2 belts and 1 lane
touched: [217, 791]
inverse: RemoveSystem { id: 791 }
… and 3 other issues

--- gamestate
+++ gamestate
@@ -44220,6 +44220,11 @@
 				length=18
 			}
  
+			{
+				to=791
+				length=43
+			}
+ 
 		}
 		asteroid_belts=
 		{
@@ -82543,6 +82548,58 @@
 		index=0
 		storm=4294967295
 	}
+	791=
+	{
+		coordinate=
+		{
+			x=433.43269
+			y=-205.48736
+			origin=4294967295
+			visual_height=4.31213
+		}
+		name=
+		{
+			key="Sgf_Terraformed"
+		}
+		planet=8403
+		planet=8404
+		planet=8405
+		planet=8406
+		star_class="sc_g"
+		hyperlane=
+		{
+			
+			{
+				to=217
+				length=43
+			}
+ 
+		}
+		asteroid_belts=
+		{
+			
+			{
+				type="debris_asteroid_belt"
+				inner_radius=158
+			}
+ 
+			{
+				type="rocky_asteroid_belt"
+				inner_radius=100
+			}
+ 
+		}
+		initializer="previously_terraformed_planet_system_initializer"
+		inner_radius=220
+		outer_radius=320
+		starbases=
+		{
+			4294967295 
+		}
+		sector=4294967295
+		index=0
+		storm=4294967295
+	}
 }
 starbase_mgr=
 {
@@ -530216,6 +530273,214 @@
 				4988 
 			}
 		}
+		8403=
+		{
+			planet_class="pc_g_star"
+			planet_size=25
+			carrier_binary_flags=3
+			name=
+			{
+				key="STAR_NAME_1_OF_1"
+				variables=
+				{
+					
+					{
+						key="NAME"
+						value=
+						{
+							key="Sgf_Terraformed"
+						}
+					}
+ 
+				}
+			}
+			coordinate=
+			{
+				x=-20
+				y=34.64102
+				origin=791
+			}
+			orbit=40
+			last_bombardment=			"0.01.01"
+			planet_orbitals=
+			{
+			}
+			bombardment_damage=0
+			entity=0
+		}
+		8404=
+		{
+			planet_class="pc_continental"
+			planet_size=21
+			carrier_binary_flags=1
+			name=
+			{
+				key="PLANET_NAME_FORMAT"
+				variables=
+				{
+					
+					{
+						key="PARENT"
+						value=
+						{
+							key="Sgf_Terraformed"
+						}
+					}
+ 
+					{
+						key="NUMERAL"
+						value=
+						{
+							key="I"
+							literal=yes
+						}
+					}
+ 
+				}
+			}
+			binary_flags=322
+			coordinate=
+			{
+				x=159.97563
+				y=2.79239
+				origin=791
+			}
+			orbit=160
+			last_bombardment=			"0.01.01"
+			planet_orbitals=
+			{
+			}
+			bombardment_damage=0
+			timed_modifier=
+			{
+				items=
+				{
+					
+					{
+						modifier="previously_terraformed_planet"
+						days=-1
+					}
+ 
+				}
+			}
+			entity=0
+			entity_name="previously_terraformed_planet_entity"
+		}
+		8405=
+		{
+			planet_class="pc_barren"
+			planet_size=12
+			carrier_binary_flags=1
+			name=
+			{
+				key="PLANET_NAME_FORMAT"
+				variables=
+				{
+					
+					{
+						key="PARENT"
+						value=
+						{
+							key="Sgf_Terraformed"
+						}
+					}
+ 
+					{
+						key="NUMERAL"
+						value=
+						{
+							key="II"
+							literal=yes
+						}
+					}
+ 
+				}
+			}
+			coordinate=
+			{
+				x=-115.70177
+				y=137.888
+				origin=791
+			}
+			orbit=180
+			last_bombardment=			"0.01.01"
+			moons=
+			{
+				8406 
+			}
+			planet_orbitals=
+			{
+			}
+			bombardment_damage=0
+			entity=1
+		}
+		8406=
+		{
+			planet_class="pc_frozen"
+			planet_size=6
+			carrier_binary_flags=1
+			name=
+			{
+				key="SUBPLANET_NAME_FORMAT"
+				variables=
+				{
+					
+					{
+						key="PARENT"
+						value=
+						{
+							key="PLANET_NAME_FORMAT"
+							variables=
+							{
+								
+								{
+									key="PARENT"
+									value=
+									{
+										key="Sgf_Terraformed"
+									}
+								}
+ 
+								{
+									key="NUMERAL"
+									value=
+									{
+										key="II"
+										literal=yes
+									}
+								}
+ 
+							}
+						}
+					}
+ 
+					{
+						key="NUMERAL"
+						value=
+						{
+							key="a"
+							literal=yes
+						}
+					}
+ 
+				}
+			}
+			binary_flags=576
+			coordinate=
+			{
+				x=-125.0987
+				y=134.4678
+				origin=791
+			}
+			orbit=10
+			last_bombardment=			"0.01.01"
+			moon_of=8405
+			planet_orbitals=
+			{
+			}
+			bombardment_damage=0
+			entity=1
+		}
 	}
 }
 astral_rifts=
@@ -954250,7 +954515,7 @@
 {
 }
 last_created_country=56
-last_created_system=790
+last_created_system=791
 leaders=
 {
 	419430400=
@@ -978901,7 +979166,7 @@
 {
 	count=
 	{
-		1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 15 1 1 1 1 2 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 7 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 2 1 1 2 1 1 1 1 1 1 
+		1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 15 1 1 1 1 2 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 7 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 2 1 1 2 1 2 1 1 1 1 
 	}
 	initializer=
 	{
